--- a/LinkerPlayer/Windows/MainWindow.xaml
+++ b/LinkerPlayer/Windows/MainWindow.xaml
@@ -1,36 +1,38 @@
-﻿<Window x:Class="LinkerPlayer.Windows.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:userControls="clr-namespace:LinkerPlayer.UserControls"
-        Title="LinkerPlayer"
-        Width="800"
-        Height="600"
-        MinWidth="300"
-        MinHeight="200"
-        Background="{DynamicResource MainWindowGradientStartBrush}"
-        WindowStyle="None"
-        AllowsTransparency="False"
-        ResizeMode="CanResize"
-        Icon="/Images/app64.ico"
-        WindowStartupLocation="CenterScreen"
-        TextElement.FontSize="14"
-        TextElement.FontWeight="Medium"
-        TextElement.Foreground="{DynamicResource DefaultTextBrush}"
-        UseLayoutRounding="True"
-        Closing="OnMainWindowClose"
-        Loaded="Window_Loaded"
-        StateChanged="Window_StateChanged"
-        mc:Ignorable="d">
+﻿<Window
+  x:Class="LinkerPlayer.Windows.MainWindow"
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+  xmlns:userControls="clr-namespace:LinkerPlayer.UserControls"
+  Title="LinkerPlayer"
+  Width="800"
+  Height="600"
+  MinWidth="300"
+  MinHeight="200"
+  AllowsTransparency="False"
+  Background="{DynamicResource MainWindowGradientStartBrush}"
+  Closing="OnMainWindowClose"
+  Icon="/Images/app64.ico"
+  Loaded="Window_Loaded"
+  ResizeMode="CanResize"
+  StateChanged="Window_StateChanged"
+  TextElement.FontSize="14"
+  TextElement.FontWeight="Medium"
+  TextElement.Foreground="{DynamicResource DefaultTextBrush}"
+  UseLayoutRounding="True"
+  WindowStartupLocation="CenterScreen"
+  WindowStyle="None"
+  mc:Ignorable="d">
 
-  <!-- Custom Window Chrome for resize functionality -->
+  <!--  Custom Window Chrome for resize functionality  -->
   <WindowChrome.WindowChrome>
-    <WindowChrome CaptionHeight="40"
-                  ResizeBorderThickness="5"
-                  CornerRadius="0"
-                  GlassFrameThickness="0"
-                  UseAeroCaptionButtons="False" />
+    <WindowChrome
+      CaptionHeight="40"
+      CornerRadius="0"
+      GlassFrameThickness="0"
+      ResizeBorderThickness="5"
+      UseAeroCaptionButtons="False" />
   </WindowChrome.WindowChrome>
 
   <Grid Margin="0">
