--- a/LinkerPlayer/Windows/PropertiesWindow.xaml
+++ b/LinkerPlayer/Windows/PropertiesWindow.xaml
@@ -27,6 +27,43 @@
       <local:InvertedBooleanToVisibilityConverter x:Key="InvertedBooleanToVisibilityConverter" />
       <local:BpmRowVisibilityConverter x:Key="BpmRowVisibilityConverter" />
       <local:InverseBpmRowVisibilityConverter x:Key="InverseBpmRowVisibilityConverter" />
+
+      <!--  Properties Window Specific DataGrid Cell Style (matches transparent theme)  -->
+      <Style
+        x:Key="PropertiesWindowDataGridCellStyle"
+        BasedOn="{StaticResource SharedDataGridCellStyle}"
+        TargetType="DataGridCell">
+        <Setter Property="Foreground" Value="{DynamicResource TitleBarForegroundBrush}" />
+        <Style.Triggers>
+          <Trigger Property="IsSelected" Value="True">
+            <Setter Property="Background" Value="{DynamicResource TrackListSelectedItemBackgroundBrush}" />
+            <Setter Property="Foreground" Value="{DynamicResource TrackListSelectedItemForegroundBrush}" />
+            <Setter Property="FontWeight" Value="Normal" />
+          </Trigger>
+        </Style.Triggers>
+      </Style>
+
+      <!--  Properties Window Specific DataGrid Row Style (Transparent Background)  -->
+      <Style
+        x:Key="PropertiesWindowDataGridRowStyle"
+        BasedOn="{StaticResource SharedDataGridRowStyle}"
+        TargetType="DataGridRow">
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="Foreground" Value="{DynamicResource TitleBarForegroundBrush}" />
+        <Style.Triggers>
+          <Trigger Property="ItemsControl.AlternationIndex" Value="1">
+            <Setter Property="Background" Value="Transparent" />
+          </Trigger>
+          <Trigger Property="ItemsControl.AlternationIndex" Value="0">
+            <Setter Property="Background" Value="Transparent" />
+          </Trigger>
+          <Trigger Property="IsSelected" Value="True">
+            <Setter Property="Background" Value="{DynamicResource TrackListSelectedItemBackgroundBrush}" />
+            <Setter Property="Foreground" Value="{DynamicResource TrackListSelectedItemForegroundBrush}" />
+            <Setter Property="FontWeight" Value="Normal" />
+          </Trigger>
+        </Style.Triggers>
+      </Style>
     </ResourceDictionary>
   </Window.Resources>
 
@@ -147,23 +184,25 @@
             </Grid>
 
             <DataGrid
+              x:Name="MetadataDataGrid"
               Grid.Row="1"
               Height="Auto"
               MinWidth="400"
               MaxHeight="Infinity"
               Margin="0,0,0,4"
               AutoGenerateColumns="False"
-              Background="Red"
               CanUserAddRows="False"
               CanUserResizeRows="False"
-              CellStyle="{StaticResource SharedDataGridCellStyle}"
+              CellStyle="{StaticResource PropertiesWindowDataGridCellStyle}"
               ColumnHeaderStyle="{StaticResource SharedDataGridColumnHeaderStyle}"
               HorizontalScrollBarVisibility="Disabled"
               ItemsSource="{Binding MetadataItems}"
               PreviewMouseWheel="DataGrid_PreviewMouseWheel"
-              RowStyle="{StaticResource SharedDataGridRowStyle}"
+              RowStyle="{StaticResource PropertiesWindowDataGridRowStyle}"
               Style="{StaticResource SharedDataGridStyle}"
-              VerticalScrollBarVisibility="Disabled">
+              VerticalScrollBarVisibility="Disabled"
+              BeginningEdit="MetadataDataGrid_BeginningEdit"
+              SelectionChanged="DataGrid_SelectionChanged">
 
               <DataGrid.Columns>
                 <DataGridTextColumn
@@ -302,6 +341,7 @@
               BorderThickness="0"
               FontSize="{DynamicResource FontSizeNormal}"
               IsReadOnly="True"
+              GotFocus="CommentTextBox_GotFocus"
               LostFocus="CommentTextBox_LostFocus"
               MouseDoubleClick="CommentTextBox_MouseDoubleClick"
               PreviewKeyDown="CommentTextBox_PreviewKeyDown"
@@ -348,6 +388,7 @@
             </Grid>
 
             <DataGrid
+              x:Name="PropertiesDataGrid"
               Grid.Row="5"
               Height="Auto"
               MinWidth="400"
@@ -356,14 +397,15 @@
               AutoGenerateColumns="False"
               CanUserAddRows="False"
               CanUserResizeRows="False"
-              CellStyle="{StaticResource SharedDataGridCellStyle}"
+              CellStyle="{StaticResource PropertiesWindowDataGridCellStyle}"
               ColumnHeaderStyle="{StaticResource SharedDataGridColumnHeaderStyle}"
               HorizontalScrollBarVisibility="Disabled"
               ItemsSource="{Binding PropertyItems}"
               PreviewMouseWheel="DataGrid_PreviewMouseWheel"
-              RowStyle="{StaticResource SharedDataGridRowStyle}"
+              RowStyle="{StaticResource PropertiesWindowDataGridRowStyle}"
               Style="{StaticResource SharedDataGridStyle}"
-              VerticalScrollBarVisibility="Disabled">
+              VerticalScrollBarVisibility="Disabled"
+              SelectionChanged="DataGrid_SelectionChanged">
 
               <DataGrid.Columns>
                 <DataGridTextColumn
@@ -404,22 +446,25 @@
             </Grid>
 
             <DataGrid
+              x:Name="ReplayGainDataGrid"
               Grid.Row="7"
               Height="Auto"
               MinWidth="400"
               MaxHeight="Infinity"
               Margin="0,0,0,10"
               AutoGenerateColumns="False"
+              BeginningEdit="ReplayGainDataGrid_BeginningEdit"
               CanUserAddRows="False"
               CanUserResizeRows="False"
-              CellStyle="{StaticResource SharedDataGridCellStyle}"
+              CellStyle="{StaticResource PropertiesWindowDataGridCellStyle}"
               ColumnHeaderStyle="{StaticResource SharedDataGridColumnHeaderStyle}"
               HorizontalScrollBarVisibility="Disabled"
               ItemsSource="{Binding ReplayGainItems}"
               PreviewMouseWheel="DataGrid_PreviewMouseWheel"
-              RowStyle="{StaticResource SharedDataGridRowStyle}"
+              RowStyle="{StaticResource PropertiesWindowDataGridRowStyle}"
               Style="{StaticResource SharedDataGridStyle}"
-              VerticalScrollBarVisibility="Disabled">
+              VerticalScrollBarVisibility="Disabled"
+              SelectionChanged="DataGrid_SelectionChanged">
 
               <DataGrid.Columns>
                 <DataGridTextColumn
@@ -475,48 +520,62 @@
                 <ColumnDefinition Width="200" />
               </Grid.ColumnDefinitions>
 
-              <!--  ItemsControl: Name/Value rows with scrollable textboxes  -->
-              <ItemsControl
+              <!--  DataGrid: Name/Value rows with editable description  -->
+              <DataGrid
+                x:Name="PictureDataGrid"
                 Grid.Column="0"
-                MinWidth="200"
-                ItemsSource="{Binding PictureInfoItems}">
-                <ItemsControl.ItemTemplate>
-                  <DataTemplate>
-                    <Grid Margin="0,1">
-                      <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="240" />
-                        <ColumnDefinition Width="*" />
-                      </Grid.ColumnDefinitions>
-                      <TextBlock
-                        Grid.Column="0"
-                        VerticalAlignment="Top"
-                        Background="{DynamicResource TrackListColumnHeaderBackgroundBrush}"
-                        FontSize="{DynamicResource FontSizeNormal}"
-                        Foreground="{DynamicResource TrackListColumnHeaderForegroundBrush}"
-                        Text="{Binding Name}" />
-                      <TextBox
-                        Grid.Column="1"
-                        MaxHeight="90"
-                        AcceptsReturn="True"
-                        Background="{DynamicResource TrackListItemBackgroundBrush}"
-                        BorderThickness="0"
-                        FontSize="{DynamicResource FontSizeNormal}"
-                        Foreground="{DynamicResource TrackListItemForegroundBrush}"
-                        IsReadOnly="True"
-                        Text="{Binding Value}"
-                        TextWrapping="Wrap"
-                        VerticalScrollBarVisibility="Auto">
-                        <TextBox.Style>
-                          <Style TargetType="TextBox">
-                            <Setter Property="Cursor" Value="Arrow" />
-                            <Setter Property="Opacity" Value="1.0" />
-                          </Style>
-                        </TextBox.Style>
-                      </TextBox>
-                    </Grid>
-                  </DataTemplate>
-                </ItemsControl.ItemTemplate>
-              </ItemsControl>
+                Height="Auto"
+                MinWidth="400"
+                MaxHeight="Infinity"
+                Margin="0,0,0,0"
+                AutoGenerateColumns="False"
+                BeginningEdit="PictureDataGrid_BeginningEdit"
+                CanUserAddRows="False"
+                CanUserResizeRows="False"
+                CellStyle="{StaticResource PropertiesWindowDataGridCellStyle}"
+                ColumnHeaderStyle="{StaticResource SharedDataGridColumnHeaderStyle}"
+                HorizontalScrollBarVisibility="Disabled"
+                ItemsSource="{Binding PictureInfoItems}"
+                PreviewMouseWheel="DataGrid_PreviewMouseWheel"
+                RowStyle="{StaticResource PropertiesWindowDataGridRowStyle}"
+                Style="{StaticResource SharedDataGridStyle}"
+                VerticalScrollBarVisibility="Disabled"
+                SelectionChanged="DataGrid_SelectionChanged">
+
+                <DataGrid.Columns>
+                  <DataGridTextColumn
+                    Width="240"
+                    MinWidth="100"
+                    Binding="{Binding Name}"
+                    CanUserResize="True"
+                    Header="Name"
+                    IsReadOnly="True" />
+                  <DataGridTemplateColumn
+                    Width="*"
+                    MinWidth="100"
+                    CanUserResize="True"
+                    Header="Value">
+                    <DataGridTemplateColumn.CellTemplate>
+                      <DataTemplate>
+                        <TextBlock
+                          MaxHeight="90"
+                          Text="{Binding Value}"
+                          TextWrapping="Wrap" />
+                      </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                    <DataGridTemplateColumn.CellEditingTemplate>
+                      <DataTemplate>
+                        <TextBox
+                          MaxHeight="90"
+                          AcceptsReturn="True"
+                          Text="{Binding Value, UpdateSourceTrigger=PropertyChanged}"
+                          TextWrapping="Wrap"
+                          VerticalScrollBarVisibility="Auto" />
+                      </DataTemplate>
+                    </DataGridTemplateColumn.CellEditingTemplate>
+                  </DataGridTemplateColumn>
+                </DataGrid.Columns>
+              </DataGrid>
 
               <!--  Album cover image  -->
               <Border
@@ -560,6 +619,7 @@
               BorderThickness="0"
               FontSize="{DynamicResource FontSizeNormal}"
               IsReadOnly="True"
+              GotFocus="LyricsTextBox_GotFocus"
               LostFocus="LyricsTextBox_LostFocus"
               MouseDoubleClick="LyricsTextBox_MouseDoubleClick"
               PreviewKeyDown="LyricsTextBox_PreviewKeyDown"
